# CC-VAR

./: .gitignore  README.md  pyproject.toml
experiments/: ocean_cellular_exp.py
functions/core/: ccvar.py
src/ccvar/: __init__.py
src/ccvar/core/: ccvar.py
