 [build-system]
 requires = ["setuptools>=69", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
 name = "ccvar-python"
 version = "0.1.0"
 description = "Cell complex vector autoregressive models with Laplacian-based features."
 authors = [{name = "Abdullah Canbolat"}]
 license = {text = "Proprietary"}
 requires-python = ">=3.10"
 dependencies = [
     "numpy>=1.24",
 ]
 
 [project.optional-dependencies]
 dev = [
     "mypy>=1.8",
     "ruff>=0.2",
     "pytest>=8.0",
 ]

[project.urls]
"Homepage" = "https://github.com/Xhipin/ccvar_python"
 
[tool.setuptools.packages.find]
where = ["src"]

 
 [tool.ruff]
 target-version = "py310"
